Fix for updating pk of unsaved records